--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -457,7 +457,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download Windows Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: artifacts
           path: artifacts
@@ -526,6 +526,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: main  # Explicitly checkout the main branch
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -657,13 +658,16 @@ jobs:
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             
+            # Ensure we're on the main branch
+            git checkout main
+            
             # Check if there are changes to commit
             $changes = git status --porcelain
             if ($changes) {
               Write-Host "Changes detected, committing..."
               git add chocolatey/anymex.nuspec chocolatey/tools/chocolateyInstall.ps1
               git commit -m "Update Chocolatey package files to version $env:VERSION"
-              git push
+              git push origin main
               Write-Host "Changes committed and pushed successfully"
             } else {
               Write-Host "No changes to commit"
