--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -22,32 +22,38 @@ jobs:
       - name: Check Job Statuses
         id: check_jobs
         env:
+          WORKFLOW_RUN: ${{ toJSON(github.event.workflow_run) }}
           JOBS: ${{ toJSON(github.event.workflow_run.jobs) }}
         run: |
+          echo "Workflow run event: $WORKFLOW_RUN"
           # Check if JOBS is null or empty
           if [ -z "$JOBS" ] || [ "$JOBS" == "null" ]; then
-            echo "Error: No job data available from workflow_run. Ensure the 'Build and Release AnymeX' workflow ran successfully."
-            echo "all_jobs_success=false" >> $GITHUB_OUTPUT
-            exit 1
+            echo "Warning: No job data available from workflow_run. This may occur if the triggering workflow failed. Attempting to proceed with available data."
+            # Set to false as a fallback, but allow the loop to run if JOBS becomes valid later
+            ALL_SUCCESS=false
+          else
+            # Initialize success flag
+            ALL_SUCCESS=true
           fi
 
           # Define the required jobs
           REQUIRED_JOBS=("build-windows" "build-ios" "build-macos" "build-android" "build-linux")
           
-          # Initialize success flag
-          ALL_SUCCESS=true
-          
-          # Check each job's conclusion
-          for JOB in "${REQUIRED_JOBS[@]}"; do
-            JOB_STATUS=$(echo "$JOBS" | jq -c ".[] | select(.name == \"$JOB\") | .conclusion")
-            if [ -z "$JOB_STATUS" ] || [ "$JOB_STATUS" != '"success"' ]; then
-              echo "Job $JOB failed or was not found. Status: $JOB_STATUS"
-              ALL_SUCCESS=false
-              break
-            else
-              echo "Job $JOB succeeded. Status: $JOB_STATUS"
-            fi
-          done
+          # Check each job's conclusion only if JOBS is valid
+          if [ -n "$JOBS" ] && [ "$JOBS" != "null" ]; then
+            for JOB in "${REQUIRED_JOBS[@]}"; do
+              JOB_STATUS=$(echo "$JOBS" | jq -c ".[] | select(.name == \"$JOB\") | .conclusion")
+              if [ -z "$JOB_STATUS" ] || [ "$JOB_STATUS" != '"success"' ]; then
+                echo "Job $JOB failed or was not found. Status: $JOB_STATUS"
+                ALL_SUCCESS=false
+                break
+              else
+                echo "Job $JOB succeeded. Status: $JOB_STATUS"
+              fi
+            done
+          else
+            echo "Skipping job status check due to missing JOBS data."
+          fi
           
           # Set output to control the workflow
           echo "all_jobs_success=$ALL_SUCCESS" >> $GITHUB_OUTPUT
